--- a/OneDrive/charcoal/click and drag/click.html
+++ b/OneDrive/charcoal/click and drag/click.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="click.css">
     <link rel="icon" href="https://fav.farm/✅" />
 
     <div class="items">
