upddated click.html

--- a/OneDrive/charcoal/click and drag/click.html
+++ b/OneDrive/charcoal/click and drag/click.html
@@ -10,20 +10,20 @@
     <link rel="icon" href="https://fav.farm/✅" />
 
     <div class="items">
-      <div class="item item1">01</div>
-      <div class="item item2">02</div>
-      <div class="item item3">03</div>
-      <div class="item item4">04</div>
-      <div class="item item5">05</div>
-      <div class="item item6">06</div>
-      <div class="item item7">07</div>
-      <div class="item item8">08</div>
-      <div class="item item9">09</div>
-      <div class="item item10">10</div>
-      <div class="item item11">11</div>
-      <div class="item item12">12</div>
-      <div class="item item13">13</div>
-      <div class="item item14">14</div>
+      <div class="item item1">NO:1</div>
+      <div class="item item2">N0:2</div>
+      <div class="item item3">N0:3</div>
+      <div class="item item4">N0:4</div>
+      <div class="item item5">N0:5</div>
+      <div class="item item6">N0:6</div>
+      <div class="item item7">N0:7</div>
+      <div class="item item8">N0:8</div>
+      <div class="item item9">N0:9</div>
+      <div class="item item10">N0:10</div>
+      <div class="item item11">NO:11</div>
+      <div class="item item12">NO:12</div>
+      <div class="item item13">NO:13</div>
+      <div class="item item14">NO:14</div>
       <div class="item item15">15</div>
       <div class="item item16">16</div>
       <div class="item item17">17</div>
