--- a/OneDrive/charcoal/Video speed controller/speed.html
+++ b/OneDrive/charcoal/Video speed controller/speed.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Video Speed Scrubber</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="speed.css" />
     <link rel="icon" href="https://fav.farm/✅" />
   </head>
   <body>
