--- a/OneDrive/HIve bootcamp/Assignment 3/index.html
+++ b/OneDrive/HIve bootcamp/Assignment 3/index.html
@@ -4,6 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HIVETV BOOTCAMP ASSIGNMENT 3</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="body">
+      <h2>About Me</h2>
+
+      <div class="profile">
+        <h3>NAME</h3>
+        <p>Taiwo Peace Fiyinfoluwa</p>
+
+        <h3>EMAIL</h3>
+        <p>developerfiyin@gmail.com</p>
+
+        <h3>ROLE</h3>
+        <p>Software Engineer</p>
+
+        <h3>PHONE NUMBER</h3>
+        <p>+234(7048360496)</p>
+
+        <h3>HOBBIES</h3>
+        <p>Learning,Teaching</p>
+        <img src="ROYALTY!!!.jpg" class="center" alt="Fiyinfoluwa's picture" />
+
+        <form action="" class="form">
+          <label for="fname">First name:</label><br />
+          <input type="text" id="fname" name="fname" /><br />
+          <label for="lname">Last name:</label><br />
+          <input type="text" id="lname" name="lname" />
+        </form>
+
+        <br />
+        <button>DOWNLOAD CV</button>
+      </div>
+    </div>
+  </body>
 </html>
